@@ -1,13 +1,11 @@
 
-import java.io.BufferedReader;
-import java.io.FileReader;
-import java.io.IOException;
+import java.io.*;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
 public class ListeQuestions {
-    private List<Question> questions;
+    private final List<Question> questions;
 
     /**
      * Constructeur qui charge les questions depuis un fichier CSV.
@@ -34,18 +32,24 @@ public class ListeQuestions {
      * @param filePath Le chemin vers le fichier CSV.
      */
     private void chargerQuestions(String filePath) {
-        try (BufferedReader br = new BufferedReader(new FileReader(filePath))) {
-            String line;
-            while ((line = br.readLine()) != null) {
-                String[] col = line.split(",");
-                String question = col[0];
-                String option1 = col[1];
-                String option2 = col[2];
-                String option3 = col[3];
-                String option4 = col[4];
-                String bonneReponse = col[5];
-                questions.add(new Question(question, option1, option2, option3, option4, bonneReponse));
-                
+        try (InputStream inputStream = getClass().getClassLoader().getResourceAsStream(filePath)) {
+            if (inputStream == null) {
+                throw new IOException("Fichier non trouvé : " + filePath);
+            }
+
+            try (BufferedReader reader = new BufferedReader(new InputStreamReader(inputStream))) {
+                String line;
+                while ((line = reader.readLine()) != null) {
+                    String[] col = line.split(";");
+                    String question = col[0];
+                    String option1 = col[1];
+                    String option2 = col[2];
+                    String option3 = col[3];
+                    String option4 = col[4];
+                    String bonneReponse = col[5];
+                    questions.add(new Question(question, option1, option2, option3, option4, bonneReponse));
+
+                }
             }
         } catch (IOException e) {
             System.err.println("Erreur lors de la lecture du fichier CSV : " + e.getMessage());
@@ -62,7 +66,7 @@ public class ListeQuestions {
             return null;
         }
         Collections.shuffle(questions);
-        return questions.remove(0); // Retire et retourne la première question de la liste mélangée
+        return questions.removeFirst(); // Retire et retourne la première question de la liste mélangée
     }
 
 
